@@ -1,6 +1,8 @@
 Changes between 1.4.8 and 1.4.9.DEV
 ==================================================
 
+- fix bug of path.visit() which would not recognize glob-style patterns
+  for the "rec" recursion argument
 - changed iniconfig parsing to better conform, now the chars ";"
   and "#" only mark a comment at the stripped start of a line
 - include recent apipkg-1.2
